--- a/style.scss
+++ b/style.scss
@@ -51,16 +51,18 @@ body{
         font-size: 13px;
         .bienvenida{
             overflow: hidden;
-            z-index: 1;
             position: relative;
             width: 100%;
-            background: rgba(70, 15, 15, 0.4);
+            height: 450px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             &::before{
                 content: "";
                 position: absolute;
                 height: 100%;
                 width: 100%;
-                background: rgba(0, 0, 0, .4);
+                background: rgba(0, 0, 0, .6);
             }
             .adorno{
                 position: absolute;
@@ -83,8 +85,7 @@ body{
                 align-items: center;
                 flex-direction: column;
                 height: 350px;
-                left: 25%;
-                width: 50%;
+                width: 70%;
                 color: white;
                 gap: 28px;
                 user-select: none;
@@ -167,21 +168,26 @@ body{
         }
         .menu{
             background: url(/img/FondoMenu.jpg);
-            padding: 50px;
+            
             position: relative;
-            align-items: center;
             display: flex;
             justify-content: center;
             flex-direction: column;
             gap: 20px;
+            h1{
+                margin: 20px 20px 0px 20px;
+                font-size: 40px;
+            }
             .barra_menu{
                 position: relative;
+                padding: 20px 2px;
+                background: rgba(0, 0, 0,.5);
                 button{
                     color: white;
                     background: rgb(161, 14, 14);
                     border-radius: 5px;
-                    width: 120px;
-                    height: 30px;
+                    width: 90px;
+                    height: 60px;
                     font-weight: bold;
                     border: none;
                     outline: none;
@@ -190,6 +196,7 @@ body{
                     transition: .2s;
                     &:hover{
                         scale: 1.1;
+                        background: rgb(65, 2, 2) ;
                     }
                 }
             }
@@ -233,10 +240,6 @@ body{
                     height: 250px;
                     overflow: hidden;
                     background: black;
-                    box-shadow: 0px 25px 45px rgba(0,0,0,0.1);
-                    border: 1px solid rgba(255,255,255,0.5);
-                    border-bottom: 1px solid rgba(255,255,255,0.2);
-                    border-right: 1px solid rgba(255,255,255,0.2);
                     display: flex;
                     flex-direction: column;
                     align-items: start;
@@ -250,6 +253,11 @@ body{
                         font-weight: 100;
                         font-size: 16px;
                         color: rgba(255, 255, 255, 0.8);
+                    }
+                    .orange{
+                        background: orangered;
+                        padding: 2px;
+                        border-radius: 5px;
                     }
                 }
             }
@@ -339,7 +347,8 @@ body{
         justify-content: space-between;
         align-items: center;
         padding: 10px 15px;
-        background: rgba(146, 33, 33, 0.5);
+        height: 50px;
+        background: rgba(146, 33, 33, 0.7);
         color: white;
         font-size: 10px;
         user-select: none;
@@ -357,7 +366,7 @@ body{
         }
         .sections{
             position: relative;
-            width: 60%;
+            width: 70%;
             display: flex;
             justify-content: space-between;
             margin-left: 5px;
