--- a/style.scss
+++ b/style.scss
@@ -181,6 +181,8 @@ body{
             .barra_menu{
                 position: relative;
                 padding: 20px 2px;
+                align-items: center;
+                justify-content: space-around;
                 background: rgba(0, 0, 0,.5);
                 button{
                     color: white;
