--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ body main .menu ul li h2 {
   color: rgba(255, 255, 255, 0.8);
 }
 body main .menu ul li .orange {
-  background: orangered;
+  background: rgb(255, 154, 39);
   padding: 2px;
   border-radius: 5px;
 }
