--- a/style.scss
+++ b/style.scss
@@ -256,7 +256,7 @@ body{
                         color: rgba(255, 255, 255, 0.8);
                     }
                     .orange{
-                        background: orangered;
+                        background: rgb(255, 154, 39);
                         padding: 2px;
                         border-radius: 5px;
                     }
