--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Josefin Sans", Arial, Helvetica, sans-serif;
 }
 
 span {
@@ -20,7 +21,7 @@ a:hover {
 }
 
 p {
-  font-size: 15px;
+  font-size: 16px;
 }
 
 body {
@@ -112,6 +113,7 @@ body main .nosotros {
   display: flex;
   align-items: center;
   min-height: 400px;
+  padding: 30px;
   color: rgb(126, 68, 3);
   background: rgb(248, 231, 183);
   width: 100%;
@@ -144,6 +146,7 @@ body main .nosotros .nosotros_content {
 body main .nosotros .nosotros_img {
   padding: 0 50px 0 0;
   position: relative;
+  height: auto;
   width: 50%;
 }
 body main .menu {
@@ -244,8 +247,11 @@ body main .menu ul li h2 {
   font-weight: bolder;
 }
 body main .menu ul li .orange {
-  background: rgb(255, 102, 0);
-  padding: 2px;
+  color: rgb(48, 23, 0);
+  font-weight: bolder;
+  font-size: 16px;
+  background: rgb(247, 149, 70);
+  padding: 3px 10px;
   border-radius: 5px;
 }
 body main .menu ul li:hover img {
