--- a/style.css
+++ b/style.css
@@ -165,30 +165,27 @@ body main .menu h1 {
 }
 body main .menu .barra_menu {
   position: relative;
-  padding: 20px 2px;
-  align-items: center;
-  justify-content: space-around;
+  width: 100%;
+  gap: 0;
+  height: 130px;
+  z-index: 10;
 }
 body main .menu .barra_menu button {
-  color: white;
-  background: rgb(255, 115, 0);
-  border-radius: 5px;
-  width: 90px;
-  height: 60px;
-  font-weight: bold;
+  position: relative;
+  display: flex;
+  width: 25%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
   border: none;
-  outline: none;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
+  font-weight: bolder;
   cursor: pointer;
   transition: 0.2s;
+  font-size: 15px;
 }
-body main .menu .barra_menu button:hover {
-  background: rgb(65, 2, 2);
+body main .menu .barra_menu .activebtn, body main .menu .barra_menu button:hover {
+  background-color: orangered;
+  color: white;
 }
 body main .menu h1 {
   z-index: 5;
@@ -250,7 +247,7 @@ body main .menu ul li .orange {
   color: rgb(48, 23, 0);
   font-weight: bolder;
   font-size: 16px;
-  background: rgb(247, 149, 70);
+  background: rgb(251, 255, 0);
   padding: 3px 10px;
   border-radius: 5px;
 }
