--- a/style.scss
+++ b/style.scss
@@ -94,10 +94,25 @@ body{
                 color: white;
                 gap: 28px;
                 user-select: none;
-                a{
-                    background: rgb(209, 101, 0);
+                .btn_bienvenida{
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                    gap: 100px;
+                    a{
+                    background: #ff1d0b;
                     padding: 8px;
                     border-radius: 8px;
+                    }
+                    .bien_Whats{
+                        background: green;
+                    }
+                }
+                
+                .bien_unete{
+                    color: white;
+                    font-weight: bolder;
                 }
             }
             
@@ -146,6 +161,10 @@ body{
                 width: 50%;
                 
             }
+            .ubic_img{
+                border-radius: 15%;
+                box-shadow: 0 0 10px rgb(255, 174, 0);
+            }
         }
         .menu{
             background: url(./img/FondoMenu3.jpg) ;
@@ -159,14 +178,14 @@ body{
             height: auto;
             h1{
                 margin: 20px 20px 0px 20px;
-                font-size: 40px;
+                font-size: 45px;
+                font-weight: bolder;
             }
             .barra_menu{
                 position: relative;
                 width: 100%;
                 gap: 0;
                 height: 130px;
-                z-index: 10;
                 button{
                     position: relative;
                     display: flex;
@@ -181,7 +200,7 @@ body{
                     font-size: 15px;
                 }
                 .activebtn, button:hover{
-                    background-color: orangered;
+                    background-color: #ff1d0b;
                     color: white;
                 }
             }
@@ -199,7 +218,7 @@ body{
             }
             .adorno_bottom{
                 position: absolute;
-                background: linear-gradient(to bottom, rgb(8, 196, 8, 0), rgb(231, 172, 62) 90%);
+                background: linear-gradient(to bottom, rgb(8, 196, 8, 0), rgb(139, 105, 41) 90%);
                 width: 100%;
                 height: 150px;
                 bottom: 0; 
@@ -266,13 +285,26 @@ body{
             min-height: 200px;
             align-items: center;
             padding: 50px;
+            position: relative;
             
+            &::after{
+                z-index: 1;
+                content: "";
+                position: absolute;
+                bottom: 0;
+                height: 100%;
+                width: 100%;
+                background: rgba(0, 0, 0, .4);
+            }
             ul{
                 list-style: none;
                 li{
                     margin-top: 10px;
                     left: 0;
                 }
+            }
+            h1, h3{
+                z-index: 5;
             }
         }
         .rese_conta{
@@ -291,7 +323,7 @@ body{
                 position: absolute;
                 width: 100%;
                 height: 100px;
-                background: linear-gradient(to bottom, rgb(235, 180, 80) 25%, rgba(170, 137, 137,0) );
+                background: linear-gradient(to bottom, rgb(139, 105, 41) 25%, rgba(170, 137, 137,0) );
                 top: 0;
             }
             &::before{
@@ -309,6 +341,7 @@ body{
                 display: flex;
 
             }
+            
             .reservas{
                 justify-content: flex-start;
                 display: flex;
@@ -344,9 +377,9 @@ body{
         align-items: center;
         padding: 10px 15px;
         height: 50px;
-        background: rgba(233, 132, 0, 0.9);
+        background: #ff1d0b;
         color: white;
-        font-size: 9px;
+        font-size: 11px;
         user-select: none;
         h1{
             cursor: pointer;
@@ -362,10 +395,10 @@ body{
         }
         .sections{
             position: relative;
-            width: 70%;
+            width: 55%;
             display: flex;
-            justify-content: space-between;
-            margin-left: 5px;
+            justify-content: space-around;
+            
             
         }
         
