--- a/style.css
+++ b/style.css
@@ -134,6 +134,14 @@ body main .nosotros {
   justify-content: center;
   font-weight: bolder;
 }
+body main .nosotros .logo_puerto {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  z-index: 1;
+  height: 90px;
+  width: 90px;
+}
 body main .nosotros .adorno_top {
   top: -2px;
   position: absolute;
@@ -391,4 +399,61 @@ body header .sections {
   width: 55%;
   display: flex;
   justify-content: space-around;
+}
+
+@media (max-width: 768px) {
+  h2 {
+    font-size: 14px;
+  }
+  h1 {
+    font-size: 20px;
+  }
+  body main .bienvenida .bienvenida_container {
+    font-size: 1px;
+  }
+  body main .bienvenida .bienvenida_container h1 {
+    font-size: 24px;
+  }
+  body main .bienvenida .bienvenida_container p {
+    font-size: 14px;
+  }
+  body main .bienvenida .bienvenida_container .btn_bienvenida {
+    gap: 40px;
+  }
+  body main .nosotros {
+    justify-content: space-around;
+    padding: 0 10px;
+    margin: 0;
+    height: auto;
+  }
+  body main .nosotros .nosotros_content {
+    padding: 0;
+  }
+  body main .nosotros .nosotros_content h1 {
+    font-size: 18px;
+  }
+  body main .nosotros .nosotros_content p {
+    font-size: 13px;
+  }
+  body main .nosotros .ubic_img {
+    width: 190px;
+    height: 190px;
+  }
+  body main .menu h1 {
+    font-size: 30px;
+  }
+  body main .menu .barra_menu {
+    height: 140px;
+  }
+  body main .menu .barra_menu button {
+    font-size: 12px;
+  }
+  body main .menu .cajamenu li {
+    width: 170px;
+    height: 240px;
+  }
+  body main .menu .cajamenu li img {
+    width: 120px;
+    height: 120px;
+  }
 }/*# sourceMappingURL=style.css.map */
