--- a/style.scss
+++ b/style.scss
@@ -130,6 +130,14 @@ body{
             width: 100%;
             justify-content: center;
             font-weight: bolder;
+            .logo_puerto{
+                position: absolute;
+                top: 10px;
+                left: 0;
+                z-index: 1;
+                height: 90px;
+                width: 90px;
+            }
             .adorno_top{
                 top: -2px;
                 position: absolute;
@@ -404,4 +412,76 @@ body{
         
     }
 
+}
+
+@media (max-width: 768px) {
+   h2{
+    font-size: 14px;
+   }
+   h1{
+    font-size: 20px;
+   }
+   body{
+        main{
+            .bienvenida{
+                
+                .bienvenida_container{
+                    h1{
+                        font-size: 24px;
+                    }
+                    p{
+                        font-size: 14px;
+                    }
+                    font-size: 1px;
+                    .btn_bienvenida{
+                        gap: 40px;
+                    }
+                }
+            }
+            .nosotros{
+                justify-content: space-around;
+                padding: 0 10px;
+                margin: 0;
+                height: auto;
+                .nosotros_content{
+                    padding: 0;
+                    h1{
+                        font-size: 18px;
+                    }
+                    p{
+                        font-size: 13px;
+                    }
+                }
+                .ubic_img{
+                    width: 190px;
+                    height: 190px;
+                    
+                }
+            }
+            .menu{
+                h1{
+                    font-size: 30px;
+                }
+                .barra_menu{
+                    height: 140px;
+                    button{
+                        font-size: 12px;
+                    }
+                }
+                .cajamenu{
+                    li{
+                        width: 170px;
+                        height: 240px;
+                        img{
+                            width: 120px;
+                            height: 120px;
+                        }
+                    }
+                }
+            }
+        }
+   }
+   
+   
+   
 }
