--- a/style.css
+++ b/style.css
@@ -120,6 +120,21 @@ body main .bienvenida .bienvenida_container .bien_unete {
   color: white;
   font-weight: bolder;
 }
+body main .bienvenida .bienvenida_container .logo_puerto {
+  position: relative;
+  top: 10px;
+  left: 0;
+  z-index: 1;
+  height: 140px;
+  width: 140px;
+}
+body main .bienvenida .bienvenida_container .bien_header {
+  position: relative;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+}
 body main .nosotros {
   overflow: hidden;
   position: relative;
@@ -133,14 +148,6 @@ body main .nosotros {
   width: 100%;
   justify-content: center;
   font-weight: bolder;
-}
-body main .nosotros .logo_puerto {
-  position: absolute;
-  top: 10px;
-  left: 0;
-  z-index: 1;
-  height: 90px;
-  width: 90px;
 }
 body main .nosotros .adorno_top {
   top: -2px;
@@ -255,8 +262,9 @@ body main .menu ul li {
   background: rgba(177, 82, 4, 0.5);
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   gap: 10px;
+  justify-content: center;
 }
 body main .menu ul li img {
   position: relative;
@@ -269,13 +277,33 @@ body main .menu ul li h2 {
   color: rgb(255, 255, 255);
   font-weight: bolder;
 }
+body main .menu ul li h2:nth-child(1), body main .menu ul li h2:nth-child(2) {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  text-align: center;
+}
 body main .menu ul li .orange {
+  position: relative;
   color: rgb(48, 23, 0);
   font-weight: bolder;
   font-size: 16px;
-  background: rgb(251, 255, 0);
   padding: 3px 10px;
+  width: 100%;
+  align-items: center;
+}
+body main .menu ul li .orange::before {
   border-radius: 5px;
+  z-index: -1;
+  content: "";
+  width: 40%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgb(251, 255, 0);
 }
 body main .menu ul li:hover img {
   scale: 1.2;
@@ -455,5 +483,77 @@ body header .sections {
   body main .menu .cajamenu li img {
     width: 120px;
     height: 120px;
+  }
+}
+@media (max-width: 420px) {
+  h2 {
+    font-size: 14px;
+  }
+  h1 {
+    font-size: 20px;
+  }
+  body main .bienvenida .bienvenida_container {
+    font-size: 1px;
+  }
+  body main .bienvenida .bienvenida_container h1 {
+    font-size: 19px;
+  }
+  body main .bienvenida .bienvenida_container .logo_puerto {
+    width: 100px;
+    height: 100px;
+  }
+  body main .bienvenida .bienvenida_container p {
+    font-size: 13px;
+  }
+  body main .bienvenida .bienvenida_container .btn_bienvenida {
+    gap: 40px;
+  }
+  body main .nosotros {
+    justify-content: space-around;
+    padding: 0 10px;
+    margin: 0;
+    height: auto;
+  }
+  body main .nosotros .nosotros_content {
+    padding: 0;
+  }
+  body main .nosotros .nosotros_content h1 {
+    font-size: 18px;
+  }
+  body main .nosotros .nosotros_content p {
+    font-size: 13px;
+  }
+  body main .nosotros .ubic_img {
+    width: 210px;
+    height: 210px;
+  }
+  body main .menu h1 {
+    font-size: 30px;
+  }
+  body main .menu .barra_menu {
+    height: 140px;
+  }
+  body main .menu .barra_menu button {
+    font-size: 12px;
+  }
+  body main .menu .cajamenu li {
+    width: 150px;
+    height: 245px;
+  }
+  body main .menu .cajamenu li img {
+    width: 120px;
+    height: 120px;
+  }
+  body main .menu .cajamenu li .orange::before {
+    left: 5px;
+  }
+  body main .menu .cajamenu li h2 {
+    font-size: 15px;
+  }
+  body header h1 {
+    font-size: 16px;
+  }
+  body header h2 {
+    font-size: 12px;
   }
 }/*# sourceMappingURL=style.css.map */
