--- a/style.scss
+++ b/style.scss
@@ -500,6 +500,7 @@ body{
                     }
                 }
                 .cajamenu{
+                    
                     li{
                         width: 170px;
                         height: 240px;
@@ -575,20 +576,22 @@ body{
                      }
                  }
                  .cajamenu{
-                     li{
-                         width: 150px;
-                         height: 245px;
-                         img{
-                             width: 120px;
-                             height: 120px;
-                         }
-                         .orange::before{
-                            left: 5px;
-                         }
-                         h2{
-                            font-size: 15px;
-                         }
-                     }
+                        gap: 30px;
+                        li{
+                            width: 150px;
+                            height: 245px;
+                            img{
+                                width: 120px;
+                                height: 120px;
+                            }
+                            .orange::before{
+                                left: 5px;
+                            }
+                            h2{
+                                font-size: 15px;
+                            }
+                        }     
+                    
                  }
              }
          }
