--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ body main .menu ul li h2 {
   color: rgb(255, 255, 255);
   font-weight: bolder;
 }
-body main .menu ul li h2:nth-child(1), body main .menu ul li h2:nth-child(2), body main .menu ul li h2:nth-child(3) {
+body main .menu ul li h2:nth-child(1), body main .menu ul li h2:nth-child(2) {
   width: 100%;
   display: flex;
   justify-content: center;
