--- a/style.scss
+++ b/style.scss
@@ -276,14 +276,13 @@ body{
                         color: rgb(255, 255, 255);
                         font-weight: bolder;
                     }
-                    h2:nth-child(1), h2:nth-child(2), h2:nth-child(3){
+                    h2:nth-child(1), h2:nth-child(2){
                         width: 100%;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         position: relative;
                         text-align: center;
-
                     }
                     
                     .orange{
